# AWeather

./: .gitignore  ChangeLog  HACKING  Makefile.am  README  TODO  aptrepo.sh  autogen.sh  aweather.nsi  configure.ac  gen-apple.sh  gen-win32.sh  gen.sh  update_build.sh
data/: .gitignore  Makefile.am  about.glade  about.ui  aweather.desktop  aweather.glade  aweather.xml  defaults.ini  main.glade  main.ui  main.ui.in
data/colors/: dr.clr  dz.clr  ph.clr  rh.clr  sw.clr  vr.clr
data/icons/16x16/: aweather.xcf
data/icons/22x22/: aweather.xcf
data/icons/24x24/: aweather.xcf
data/icons/32x32/: aweather.xcf
data/icons/48x48/: aweather.xcf
docs/: .gitignore  Makefile.am  aweather.ad  userguide.ad  wsr88ddec.ad
docs/api/: Makefile.am  aweather-sections.txt
examples/plugin/: .gitignore  teapot.h
examples/tex/: mkfile
m4/: 01gnolib.m4  dolt.m4
opt/: .gitignore  dec.c  mkfile
opt/rsl/: rsl-1.40.ebuild  rsl-automake.patch  rsl-gzip.patch
src/: .gitignore  .vimrc  Makefile.am  aweather-colormap.c  aweather-colormap.h  aweather-gui.c  aweather-gui.h  aweather-location.c  aweather-location.h  aweather-plugin.c  aweather-plugin.h  aweather-view.c  aweather-view.h  aweather.c  compat.h  cube.c  cube.h  data.c  data.h  example.c  example.h  gis-opengl.c  gis-opengl.h  gis-view.c  gis-world.c  gis-world.h  level2.c  level2.h  location.c  location.h  main.c  marching.c  marshal.list  misc.h  opengl.c  opengl.h  plugin-example.c  plugin-example.h  plugin-radar-colormap.c  plugin-radar.c  (+11 more)
src/examples/: tex.c
src/examples/plugin/: mkfile  teapot.c
src/examples/tex/: tex.c
src/gis/: .gitignore  Makefile.am  gis-data.c  gis-data.h  gis-marshal.c  gis-marshal.h  gis-marshal.list  gis-opengl.c  gis-opengl.h  gis-plugin.c  gis-plugin.h  gis-prefs.c  gis-prefs.h  gis-view.c  gis-view.h  gis-world.c  gis-world.h  gis.h  gis_test.c  gpqueue.c  gpqueue.h  libgis.pc.in  roam.c  roam.h  wms.c  wms.h  wms_test.c
src/plugins/: Makefile.am  alert-info.c  alert-info.h  alert.c  alert.h  example.c  example.h  gps-plugin.c  gps-plugin.h  level2.c  level2.h  marching.c  marching.h  radar-colormap.c  radar-info.c  radar-info.h  radar-misc.h  radar.c  radar.h  ridge.c  ridge.h
